<resources>
    <string name="app_name">ConectorAndroidPHP</string>
    <string name="label_tela_inicial">Bem Vindo ao Sistema de Cadastro de Usuarios</string>
    <string name="label_cadastro_usuario">Cadastro de Usuario</string>
    <string name="label_nome">Nome: </string>
    <string name="label_rg">RG: </string>
    <string name="label_cpf">CPF: </string>
    <string name="label_email">Email: </string>
    <string name="label_telefone">Telefone: </string>
    <string name="Label_data_nasc">Data Nascimento: </string>
    <string name="btn_cadastrar_usuario">Cadastrar Usuario</string>
    <string name="btn_visualizar_lista_usuarios">Visualizar Lista de Usuarios</string>
    <string name="btn_cadastrar">Cadastrar</string>
</resources>
